fixed routes, send message, add reaction tbu
